Fixed overflow

--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ body {
   background-attachment: scroll;
   background-size: cover;
   font-family: "Noto Sans", "Noto Sans CJK TC", "Microsoft JhengHei", "微軟正黑體", sans-serif;
+  overflow-x: hidden;
 }
 
 .bg{
